# llamacpp-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/llamacpp_cli/: __init__.py  cli.py  config.py  db.py  installer.py  llm_plugin.py  model_manager.py  proxy.py  ps.py  run.py  search.py  server.py
tests/: test_cli.py  test_config.py  test_db.py  test_model_manager.py
