[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamacpp-cli"
version = "0.1.0"
description = "Ollama-like CLI wrapper around llama.cpp"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
urls = { "Homepage" = "https://github.com/joeyjiaojg/llamacpp-cli", "Source" = "https://github.com/joeyjiaojg/llamacpp-cli", "Bug Tracker" = "https://github.com/joeyjiaojg/llamacpp-cli/issues" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
    "huggingface-hub>=0.20",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
llamacpp = "llamacpp_cli.cli:cli"

[project.entry-points."llm_plugins"]
llamacpp-update = "llamacpp_cli.llm_plugin"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
